returned support type and value
